infrastructure/monitoring/grafana/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: grafana-gateway
      group: gateway.networking.k8s.io
      kind: Gateway
      sectionName: websecure
  hostnames:
    - grafana.ndomi.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: grafana
          port: 80
          weight: 1
